--- a/sass/components/_common.scss
+++ b/sass/components/_common.scss
@@ -95,3 +95,7 @@ section {
   padding-top: 20px;
   background-color: $main-background-color;
 }
+
+.hidden {
+  display: none;
+}
