--- a/sass/components/_feedback.scss
+++ b/sass/components/_feedback.scss
@@ -9,10 +9,11 @@
   box-shadow: 0px 20px 50px rgba(156, 126, 99, 0.25);
   border-radius: 20px;
   width: 322px;
-  height: auto;
+  height: 436px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 50px;
+  cursor: pointer;
 }
 .feedback-title {
   font-family: "Roboto";
@@ -72,4 +73,5 @@
 }
 .feedback-wrap {
   padding: 81px 36px 86px 36px;
+  overflow: hidden;
 }
